# go-taglib

./: .gitmodules  CMakeLists.txt  README.md  go.mod  go.sum  taglib.cpp  taglib.go  taglib.wasm  taglib2.go  taglib_test.go  wazero.go
embed/: CMakeLists.txt  build  embed.go  exports.txt  tag_c.wasm  taglib.wasm  taglib_wasm.cpp
testdata/: eg.flac  eg.m4a  normal.flac
